# FixedPointFFT

./: .clang-format  CMakeLists.txt  README.md
examples/: CMakeLists.txt  example_audio_processing.cpp
include/: fixedpointfft.hpp
include/fpfft/: config.hpp  preprocess_utils.hpp  version.hpp
include/fpfft/bits/: bits.hpp  cz.hpp
include/fpfft/containers/: lut.hpp  nd_array.hpp  nd_vector.hpp  nd_vector_impl.hpp
include/fpfft/debug/: README.md  assert.hpp
include/fpfft/math/: README.md  abs.hpp  clamp.hpp  factorial.hpp  math.hpp  pow.hpp  sincos.hpp  sqrt.hpp
include/fpfft/numbers/: README.md  complex.hpp  complex_impl.hpp  fixed_point.hpp  fixed_point_impl.hpp  forward_decl.hpp  numbers.hpp  sfinae.hpp
include/fpfft/plan/: README.md  plan.hpp  plan_creator.hpp  plan_creator_impl.hpp  plan_impl.hpp
include/fpfft/transforms/: README.md  dft_naive.hpp  direction.hpp  fft_cooleytukey.hpp
scripts/: format.sh  run_tests.sh
src/: arithmetic_test.cpp  complex_test.cpp  fft_test.cpp  ifft_test.cpp  math_functions_test.cpp  test_common.hpp
